<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_name_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_id_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_date_of_birth_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_blood_group" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_phone_no" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_state_name" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_district_name" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_address" />

    </LinearLayout>
</ScrollView>